--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="./css/app.css">
   <title>Fizz Buzz</title>
 </head>
 <body>
-  
+
+  <div class="container">
+    <ul class="flex">
+      <li>prova</li>
+      <li>prova</li>
+      <li>prova</li>
+      <li>prova</li>
+      <li>prova</li>
+      <li>prova</li>
+    </ul>
+  </div>
 
 
   <script src="./js/app.js"></script>
