--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <link rel="stylesheet" href="./css/app.css">
   <title>Fizz Buzz</title>
 </head>
-<body>
+<body class="dark-blue">
 
-  <div class="container">
-    <ul class="flex">
-      <li>prova</li>
-      <li>prova</li>
-      <li>prova</li>
-      <li>prova</li>
-      <li>prova</li>
-      <li>prova</li>
+    <h1>FizzBuzzDOM</h1>
+    <ul class="container flex">
+      <li><span class="light-blue">prova</span></li>
+      <li><span class="light-blue">prova</span></li>
+      <li><span class="light-blue">prova</span></li>
+      <li><span class="light-blue">prova</span></li>
+      <li><span class="light-blue">prova</span></li>
+      <li><span class="light-blue">prova</span></li>
+      <li><span class="light-blue">prova</span></li>
     </ul>
-  </div>
 
 
   <script src="./js/app.js"></script>
