ADD - created new card with createElement() with nested elements

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <h1>FizzBuzzDOM</h1>
     <ul class="container flex">
-      <li><span class="light-blue">prova</span></li>
-      <li><span class="light-blue">prova</span></li>
-      <li><span class="light-blue">prova</span></li>
-      <li><span class="light-blue">prova</span></li>
-      <li><span class="light-blue">prova</span></li>
-      <li><span class="light-blue">prova</span></li>
-      <li><span class="light-blue">prova</span></li>
+      <li><div class="light-blue"><p>prova</p></div></li>
+      <li><div class="light-blue">prova</div></li>
+      <li><div class="light-blue">prova</div></li>
+      <li><div class="light-blue">prova</div></li>
+      <li><div class="light-blue">prova</div></li>
+      <li><div class="light-blue">prova</div></li>
+      <li><div class="light-blue">prova</div></li>
     </ul>
 
 
